--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
 
-    <link rel="stylesheet" href="/css/open-iconic-bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="/css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="/css/animate.css">
     
     <link rel="stylesheet" href="/css/owl.carousel.min.css">
@@ -24,9 +24,17 @@
 
    
     <link rel="stylesheet" href="/css/flaticon.css">
+    <link rel="stylesheet" href="/css/icomoon.css"> -->
+    <link rel="stylesheet" href="/css/flaticon.css">
     <link rel="stylesheet" href="/css/icomoon.css">
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+    crossorigin="anonymous"
+  />
     <link rel="stylesheet" href="/css/style.css">
-  
+   
     <title>Stories</title>
   </head>
   <body>
@@ -47,7 +55,7 @@
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   
   
-  <script src="js/jquery.easing.1.3.js"></script>
+  <!-- <script src="js/jquery.easing.1.3.js"></script>
   <script src="js/jquery.waypoints.min.js"></script>
   <script src="js/jquery.stellar.min.js"></script>
   <script src="js/owl.carousel.min.js"></script>
@@ -57,10 +65,11 @@
  
   <script src="js/scrollax.min.js"></script>
    
-  <script src="js/main.js"></script>
+  
 
 
   <script src="js/popper.min.js"></script>
-  <script src="js/aos.js"></script>
+  <script src="js/aos.js"></script> -->
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/main.js"></script>
 </html>
