--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="/css/magnific-popup.css">
 
-    <link rel="stylesheet" href="/css/aos.css">
+    
 
     <link rel="stylesheet" href="/css/ionicons.min.css">
 
@@ -25,15 +25,16 @@
    
     <link rel="stylesheet" href="/css/flaticon.css">
     <link rel="stylesheet" href="/css/icomoon.css"> -->
-    <link rel="stylesheet" href="/css/flaticon.css">
-    <link rel="stylesheet" href="/css/icomoon.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/aos.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/flaticon.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/icomoon.css">
     <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
     crossorigin="anonymous"
   />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
    
     <title>Stories</title>
   </head>
@@ -51,24 +52,42 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
+ <!--  <script src="%PUBLIC_URL%/js/jquery.min.js"></script>
+  <script src="%PUBLIC_URL%/js/jquery-migrate-3.0.1.min.js"></script>
   
   
-  <!-- <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
+ <script src="%PUBLIC_URL%/js/jquery.easing.1.3.js"></script>
+  <script src="%PUBLIC_URL%/js/jquery.waypoints.min.js"></script>
+  <script src="%PUBLIC_URL%/js/jquery.stellar.min.js"></script>
+  <script src="%PUBLIC_URL%/js/owl.carousel.min.js"></script>
+  <script src="%PUBLIC_URL%/js/jquery.magnific-popup.min.js"></script>
   
-  <script src="js/jquery.animateNumber.min.js"></script>
+  <script src="%PUBLIC_URL%/js/jquery.animateNumber.min.js"></script> 
  
-  <script src="js/scrollax.min.js"></script>
+  <script src="%PUBLIC_URL%/js/scrollax.min.js"></script>
    
   
 
 
-  <script src="js/popper.min.js"></script>
-  <script src="js/aos.js"></script> -->
+  <script src="%PUBLIC_URL%/js/popper.min.js"></script>
+  <script src="%PUBLIC_URL%/js/aos.js"></script> 
+  <script src="%PUBLIC_URL%/js/main.js"></script>  -->
+
+  <script src="%PUBLIC_URL%/js/jquery.min.js"></script>
+  <script src="%PUBLIC_URL%/js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="%PUBLIC_URL%/js/popper.min.js"></script>
+  <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
+  <script src="%PUBLIC_URL%/js/jquery.easing.1.3.js"></script>
+  <script src="%PUBLIC_URL%/js/jquery.waypoints.min.js"></script>
+  <script src="%PUBLIC_URL%/js/jquery.stellar.min.js"></script>
+  <script src="%PUBLIC_URL%/js/owl.carousel.min.js"></script>
+  <script src="%PUBLIC_URL%/js/jquery.magnific-popup.min.js"></script>
+ <!--  <script src="%PUBLIC_URL%/js/aos.js"></script> -->
+  <script src="%PUBLIC_URL%/js/jquery.animateNumber.min.js"></script>
+  <!-- <script src="%PUBLIC_URL%/js/bootstrap-datepicker.js"></script> -->
+   
+  <script src="%PUBLIC_URL%/js/scrollax.min.js"></script>
+ 
+  <script src="%PUBLIC_URL%/js/main.js"></script>
   
 </html>
